<resources>
    <string name="app_name">Terveyssovellusryhmä8</string>
    <string name="button_teelisays">Tee Lisäys!</string>
    <string name="button_avaapaivakirja">Avaa Päiväkirja</string>
    <string name="textview_title">KOLMEN COWBOYN MIELIALAPPI</string>
    <string name="textview_paivakirjatitle">Sinun Päiväkirjasi</string>
    <string name="button_teelisayspaivakirjassa">Nappi, joka vie lisäys sivulle</string>
    <string name="edittext_paivamaara">Syötä Päivämäärä</string>
    <string name="button_lisaa">Päivitä Lisäys!</string>
    <string name="multilineedittext_kirjaus2">Kirjoita Tähän (maks. 600 merk.)</string>
    <string name="edittext_kalorit">Syötä Kalorimäärä</string>
    <string name="button_koti">Nappi, joka vie kotiin</string>
    <string name="kirjotatahan">Kirjoita tähän</string>
    <string name="mieliala">Mieliala</string>
    <string name="button_takaisin">Nappi, joka vie takaisin päiväkirjaan</string>
    <string name="alertViesti">Sinun pitää syöttää päivämäärä ennen jatkamista</string>
    <string name="alertKyllä">Kyllä</string>
    <string name="alertVaroitus">Varoitus!</string>
    <string name="alertPoistoViesti">Haluatko poistaa päiväkirjamerkinnän?</string>
    <string name="alertEi">Ei</string>
    <string name="alertOk">Okei</string>
    <string name="päivä">Päivä:</string>
    <string name="logi">Logi:</string>
    <string name="kalorit">Kalorit:</string>
    <string name="mielialaString">Mieliala:</string>
    <string name="tyhjä">Tyhjä</string>
    <string name="buttonTallenna">Tallenna</string>
    <string name="buttonMuokkaa">Muokkaa</string>
    <string name="buttonTakaisin">Nappi, joka vie takaisin viime aktiviteettiin</string>
    <string name="rbdi">RBDI-Mielialakysely</string>
    <string name="alertVainNumeroita">Mielialasi tulee sisältää kirjaimia tai emojeja</string>
    <string name="rentoutumisharjoitus">Rentoutumisharjoitus</string>
    <string name="mielialakysely">Mielialakysely</string>
    <string name="etVastannutAlert">Et kirjoittanut mielialaasi tai päivitystä</string>
    <string name="mood1">1. Minkälainen on mielialasi?</string>
    <string name="mood1_1">Mielialani on melko valoisa ja hyvä</string>
    <string name="mood1_2">En ole alakuloinen tai surullinen</string>
    <string name="mood1_3">Tunnen itseni alakuloiseksi ja surulliseksi</string>
    <string name="mood1_4">Olen alakuloinen jatkuvasti, enkä pääse siitä</string>
    <string name="mood1_5">Olen niin masentunut ja alavireinen, etten kestä enää</string>
    <string name="mood2">2. Miten suhtaudut tulevaisuuteen?</string>
    <string name="mood2_1">Suhtauden tulevaisuuteen toiveikkaasti</string>
    <string name="mood2_2">En suhtaudu tulevaisuuteen toivottomasti</string>
    <string name="mood2_3">Tulevaisuus tuntuu minusta melko masentavalta</string>
    <string name="mood2_4">Minusta tuntuu, ettei minulla ole tulevaisuudelta mitään odotettavaa</string>
    <string name="mood2_5">Tulevaisuus tuntuu minusta toivottomalta, enkä jaksa uskoa, että asiat muuttuisivat parempaan päin</string>
    <string name="mood3">3. Miten katsot elämäsi sujuneen?</string>
    <string name="mood3_1">Olen elämässäni onnistunut huomattavan usein</string>
    <string name="mood3_2">En tunne epäonnistuneeni elämässä</string>
    <string name="mood3_3">Minusta tuntuu, että olen epäonnistunut pyrkimyksissäni tavallista useammin</string>
    <string name="mood3_4">Elämäni on tähän saakka ollut vain sarja epäonnistumisia</string>
    <string name="mood3_5">Tunnen epäonnistuneeni täydellisesti ihmisenä</string>
    <string name="mood4">4. Miten tyytyväiseksi tai tyytymättömäksi tunnet itsesi?</string>
    <string name="mood4_1">Olen varsin tyytyväinen elämääni</string>
    <string name="mood4_2">En ole erityisen tyytyväinen</string>
    <string name="mood4_3">En nauti asioista samalla tavoin kuin ennen</string>
    <string name="mood4_4">Minusta tuntuu, etten saa enää tyydytystä juuri mistään</string>
    <string name="mood4_5">Olen täysin tyytymätön kaikkeen</string>
    <string name="mood5">5. Minkälaisena pidät itseäsi?</string>
    <string name="mood5_1">Tunnen itseni melko hyväksi</string>
    <string name="mood5_2">En tunne itseäni huonoksi ja arvottomaksi</string>
    <string name="mood5_3">Tunnen itseni huonoksi ja arvottomaksi melko usein</string>
    <string name="mood5_4">Nykyään tunnen itseni arvottomaksi melkein aina</string>
    <string name="mood5_5">Olen kerta kaikkiaan huono ja arvoton</string>
    <string name="mood6">6. Onko sinulla pettymyksen tunteita?</string>
    <string name="mood6_1">Olen tyytyväinen itseeni ja suorituksiini</string>
    <string name="mood6_2">En ole pettynyt itseni suhteen</string>
    <string name="mood6_3">Olen pettynyt itseni suhteen</string>
    <string name="mood6_4">Minua inhottaa itseni</string>
    <string name="mood6_5">Vihaan itseäni</string>
    <string name="mood7">7. Onko sinulla itsesi vahingoittamiseen liittyviä ajatuksia?</string>
    <string name="mood7_1">Minulla ei ole koskaan ollut itsemurha-ajatuksia</string>
    <string name="mood7_2">En ajattele, enkä halua vahingoittaa itseäni</string>
    <string name="mood7_3">Minusta tuntuu, että olisi parempi jos olisin kuollut</string>
    <string name="mood7_4">Minulla on tarkat suunnitelmat itsemurhasta</string>
    <string name="mood7_5">Tekisin itsemurhan, jos siihen olisi mahdollisuus</string>
    <string name="mood8">8. Miten suhtaudut vieraiden ihmisten tapaamiseen?</string>
    <string name="mood8_1">Pidän ihmisten tapaamisesta ja juttelemisesta</string>
    <string name="mood8_2">En ole menettänyt kiinnostusta muihin ihmisiin</string>
    <string name="mood8_3">Toiset ihmiset eivät enää kiinnosta minua niin paljon kuin ennen</string>
    <string name="mood8_4">Olen melkein menettänyt mielenkiintoni sekä tunteeni toisia ihmisiä kohtaan</string>
    <string name="mood8_5">Olen menettänyt mielenkiintoni muihin ihmisiin, enkä välitä heistä lainkaan</string>
    <string name="mood9">9. Miten suhtaudut vieraiden ihmisten tapaamiseen?</string>
    <string name="mood9_1">erilaisten päätösten tekeminen on minulle helppoa</string>
    <string name="mood9_2">pystyn tekemään päätöksiä samoin kuin ennenkin</string>
    <string name="mood9_3">Varmuuteni on vähentynyt ja yritän lykätä päätöksen tekoa</string>
    <string name="mood9_4">Minulla on suuria vaikeuksia päätösten teossa</string>
    <string name="mood9_5">En pysty enää lainkaan tekemään ratkaisuja ja päätöksiä</string>
    <string name="mood10">10. Minkälaisena pidät olemustasi ja ulkonäössäsi</string>
    <string name="mood10_1">Olen melko tyytyväinen ulkonäkööni ja olemukseeni</string>
    <string name="mood10_2">Ulkonäössäni ei ole minua haittaavia piirteitä</string>
    <string name="mood10_3">Olen huolissani siitä, että näytän epämiellyttävältä</string>
    <string name="mood10_4">Minusta tuntuu, että näytän rumalta</string>
    <string name="mood10_5">Olen varma, että näytän rumalta ja vastenmieliseltä</string>
    <string name="mood11">11. Minkälaista nukkumisesi on?</string>
    <string name="mood11_1">Minulla ei ole nukkumisessa minkäänlaisia vaikeuksia</string>
    <string name="mood11_2">Nukun yhtä hyvin kuin ennenkin</string>
    <string name="mood11_3">Herätessäni aamuisin olen paljon väsyneempi kuin ennen</string>
    <string name="mood11_4">Minua haittaa unettomuus</string>
    <string name="mood11_5">kärsin unettomuudesta, nukahtamisvaikeuksista tai liian aikaisesta kesken unien heräämisestä</string>
    <string name="mood12">12. Tunnetko väsymystä ja uupumusta?</string>
    <string name="mood12_1">Väsyminen on minulle lähes täysin vierasta</string>
    <string name="mood12_2">En väsy helpommin kuin tavallisestikaan</string>
    <string name="mood12_3">Väsyn helpommin kuin ennen</string>
    <string name="mood12_4">Vähäinen työ väsyttää ja uuvuttaa minua</string>
    <string name="mood12_5">Olen liian väsynyt tehdäkseni mitään</string>
    <string name="mood13">13. Minkälainen ruokahalusi on?</string>
    <string name="mood13_1">Ruokahalussani ei ole mitään hankaluuksia</string>
    <string name="mood13_2">Ruokahaluni on ennallaan</string>
    <string name="mood13_3">Ruokahaluni on huonompi kuin ennen</string>
    <string name="mood13_4">Ruokahaluni on nyt paljon huonompi kuin ennen</string>
    <string name="mood13_5">Minulla ei ole enää lainkaan ruokahalua</string>
    <string name="mood14">14. Oletko ahdistunut ja jännittynyt?</string>
    <string name="mood14_1">Pidän itseäni melko hyvähermoisena enkä ahdistu kovinkaan helposti</string>
    <string name="mood14_2">En tunne itseäni ahdistuneeksi tai "huonohermoiseksi"</string>
    <string name="mood14_3">Ahdistun ja jännityn melko helposti</string>
    <string name="mood14_4">Tulen erityisen helposti tuskaiseksi, ahdistuneeksi tai jännittyneeksi</string>
    <string name="mood14_5">Tunnen itseni jatkuvasti ahdistuneeksi ja tuskaiseksi kuin hermoni olisivat "loppuun kuluneet"</string>
    <string name="depression1">Ei masennusoireita</string>
    <string name="depression2">Lieviä masennusoireita</string>
    <string name="depression3">Kohtalaisia masennusoireita</string>
    <string name="depression4">Vakavia masennusoireita</string>
    <string name="forwards">Eteenpäin</string>
    <string name="backwards">Taaksepäin</string>
    <string name="answer">Vastaa kysymykseen!</string>
    <string name="end">Katso tulokset</string>
    <string name="home">Koti</string>
    <string name="start">Soita</string>
    <string name="stop">Seis</string>
    <string name="pause">Pysäytä</string>
    <string name="results">Mielialakyselyn tulokset</string>
    <string name="radionappi">radionappi</string>
    <string name="oletustextview">oletusteksti</string>
    <string name="textViewAloitusEka">Tervetuloa</string>
    <string name="textViewAloitusToka">Käyttämään päiväkirjasovellusta ensimmäistä kertaa</string>
    <string name="textViewAloitusVanha">Tervetuloa takaisin </string>
    <string name="textViewAloitusVanha2">Käyttämään päiväkirjasovellusta</string>
    <string name="textViewPresents2" translatable="false">Presents</string>
    <string name="textViewPresents" translatable="false">Big Money Rantahahmo Oy Ab LLC Object 8 Team Productions</string>
    <string name="Lainausteksti1">Kun korvaat negatiiviset ajatukset positiivisilla, aloitat positiiviset tulokset.</string>
    <string name="Lainaustekija1" translatable="false">Willie Nelson.</string>
    <string name="Lainausteksti2">Pieni positiivinen muutos voi muuttaa koko päivän tai koko elämäsi.</string>
    <string name="Lainaustekija2" translatable="false">Nishant Grover.</string>
    <string name="Lainausteksti3">Hyviä asioita tapahtuu joka päivä. Meidän täytyy vain kertoa niistä.</string>
    <string name="Lainaustekija3" translatable="false">Anne Wilson Schaef.</string>
    <string name="Lainausteksti4">Voit muuttaa vain itseäsi, mutta joskus se muuttaa kaikkea.</string>
    <string name="Lainaustekija4" translatable="false">Gary W Goldstein.</string>
    <string name="Lainausteksti5">Me heräämme toisissa samalla henkisellä asenteella, jota meillä on heitä kohtaan.</string>
    <string name="Lainaustekija5" translatable="false">Elbert Hubbard.</string>
    <string name="Lainausteksti6">Negatiivinen tilanne muunnetaan aina positiiviseksi.</string>
    <string name="Lainaustekija6" translatable="false">Michael Jordan.</string>
    <string name="Lainausteksti7">Olemme mitä ajattelemme. Kaikki mitä me olemme peräisin ajatuksistamme. Ajatamme me rakentaa maailmaa.</string>
    <string name="Lainaustekija7" translatable="false">Buddha.</string>
    <string name="Lainausteksti8">Voimme muuttaa elämäämme. Voimme tehdä, olla ja olla juuri sitä, mitä haluamme.</string>
    <string name="Lainaustekija8" translatable="false">Tony Robbins</string>
    <string name="Lainausteksti9">Kaikki ajatus on siemen. Jos istut mätäsi siemeniä, älä luota herkullisten omenoiden poimintaan.</string>
</resources>