<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aquasqueeze"


    tools:context=".TyhjaActivityEditorActivity">

    <EditText
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:id="@+id/editKirjaus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/multilineedittext_kirjaus2"
        android:inputType="textMultiLine"
        android:maxLength="600"
        android:maxLines="20"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/deepteal"
        android:textColorHint="#546E7A"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <Button
        android:id="@+id/buttonTallenna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/minunnappini"
        android:ellipsize="end"
        android:onClick="saveEdits"
        android:padding="5dp"
        android:text="@string/buttonTallenna"
        android:textColor="#FFFDE7"
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toStartOf="@+id/guideline45" />
    <EditText
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:layout_margin="10dp"
        android:id="@+id/editPaiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_paivamaara"
        android:inputType="textPersonName"
        android:maxLength="18"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/deepteal"
        android:textColorHint="#546E7A"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />
    <EditText
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:id="@+id/editKalorit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edittext_kalorit"
        android:inputType="number"
        android:maxLength="12"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/deepteal"
        android:textColorHint="#546E7A"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/editPaiva"/>
    <EditText
        app:autoSizeMaxTextSize="30dp"
        app:autoSizeMinTextSize="10dp"
        app:autoSizeTextType="uniform"
        android:ellipsize="end"
        android:id="@+id/editMieliala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mieliala"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/deepteal"
        android:textColorHint="#546E7A"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toBottomOf="@+id/editKalorit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:background="@drawable/minunnappini"
        android:id="@+id/buttonTakaisinTyhjaEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/buttonTakaisin"
        android:onClick="goBack"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintStart_toStartOf="@+id/guideline21"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline45"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>